# jinja2xlsx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt
.github/workflows/: python-package.yml
jinja2xlsx/: __init__.py  adjust.py  api.py  config.py  image.py  models.py  parse.py  render.py  style.py  testing_utils.py  utils.py
scripts/: build-and-deploy.bat  bump-version.bat  setup-pypi.bat  update-deps.bat
test_data/: table.html  table_with_colgroup.html  table_with_complex_style.html  table_with_image.html  table_with_image.xlsx  table_with_image_url.html  table_with_inline_styles.html  table_with_merged_cells.html  table_with_merged_cells.html.xlsx  table_with_merged_cells_styled.html  table_with_multiple_borders.html  table_with_relative_image.html  table_with_row_height.html  table_with_side_borders.html  table_with_th.html  table_with_th.xlsx  table_with_wrap.html
tests/: test_api.py  test_table_creation.py
