
[tool.black]
line-length = 98
py36 = true
skip-string-normalization = true

[tool.poetry]
name = "jinja2xlsx"
version = "0.1.0"
description = "Convert jinja2-html to xlsx"
authors = ["potykion <potykion@gmail.com>"]
license = "mit"
readme = "README.md"
repository  = "https://github.com/potykion/jinja2xlsx"

[tool.poetry.dependencies]
python = "^3.7"
requests-html = "^0.10.0"
openpyxl = "^2.6"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
mypy = "^0.670.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pre-commit = "^1.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

