
[tool.black]
line-length = 98
py36 = true
skip-string-normalization = true

[tool.poetry]
name = "jinja2xlsx"
version = "0.3.1"
description = "Create xlsx-tables from html-tables"
authors = ["potykion <potykion@gmail.com>"]
license = "mit"
readme = "README.md"
repository  = "https://github.com/potykion/jinja2xlsx"

[tool.poetry.dependencies]
python = "^3.7"
requests-html = "^0.10.0"
openpyxl = "^3.0"
jinja2 = "^2.10"
pillow = {version = "^6.0",optional = true}
cached-property = "^1.5.1"

[tool.poetry.extras]
pil = ["pillow"]

[tool.poetry.dev-dependencies]
pytest = "^4.3"
mypy = "^0.670.0"
black = {version = "^18.3-alpha.0",allow-prereleases = true}
pre-commit = "^1.14"
memory_profiler = "^0.55.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

