
[tool.black]
line-length = 98
py36 = true
skip-string-normalization = true

[tool.poetry]
name = "jinja2xlsx"
version = "1.1.2"
description = "Create xlsx-tables from html-tables"
authors = ["potykion <potykion@gmail.com>"]
license = "mit"
readme = "README.md"
repository  = "https://github.com/potykion/jinja2xlsx"

[tool.poetry.dependencies]
python = "^3.7"
requests-html = "^0.10.0"
openpyxl = "^3.0"
jinja2 = "^3.1"
pillow = {version = "^9.4",optional = true}
cached-property = "^1.5"

[tool.poetry.extras]
pil = ["pillow"]

[tool.poetry.dev-dependencies]
pytest = "^7.2"
mypy = "^0.991"
black = {version = "^23.1-alpha.1",allow-prereleases = true}
pre-commit = "^2.21"
memory_profiler = "^0.55.0"
flake8 = "^5"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

